--- a/templates/register.html
+++ b/templates/register.html
@@ -9,25 +9,50 @@
         <meta name="generator" content="Hugo 0.88.1">
         <title>Signin Template · Bootstrap v5.1</title>
 
-        <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
-
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-              crossorigin="anonymous">
+        <link href="/static/bootstrap.min.css" rel="stylesheet">
         <meta name="theme-color" content="#7952b3">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-                crossorigin="anonymous"></script>
 
         <style>
-            .bd-placeholder-img {
-                font-size: 1.125rem;
-                text-anchor: middle;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                user-select: none;
+            html,
+            body {
+                height: 100%;
             }
+
+            body {
+                display: flex;
+                align-items: center;
+                padding-top: 40px;
+                padding-bottom: 40px;
+                background-color: #f5f5f5;
+            }
+
+            .form-signin {
+                width: 100%;
+                max-width: 330px;
+                padding: 15px;
+                margin: auto;
+            }
+
+            .form-signin .checkbox {
+                font-weight: 400;
+            }
+
+            .form-signin .form-floating:focus-within {
+                z-index: 2;
+            }
+
+            .form-signin input[type="email"] {
+                margin-bottom: -1px;
+                border-bottom-right-radius: 0;
+                border-bottom-left-radius: 0;
+            }
+
+            .form-signin input[type="password"] {
+                margin-bottom: 10px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+            }
+
 
             @media (min-width: 768px) {
                 .bd-placeholder-img-lg {
@@ -35,7 +60,7 @@
                 }
             }
         </style>
-        <link href="https://getbootstrap.com/docs/5.1/examples/sign-in/signin.css" rel="stylesheet">
+
     </head>
     <body class="text-center">
 
@@ -45,19 +70,6 @@
         <form method="post">
 
 
-            {#    <div class="form-floating">#}
-            {#      <input type="text" class="form-control" id="id_username" placeholder="name@example.com">#}
-            {#      <label for="floatingInput">Email address</label>#}
-            {#    </div>#}
-            {#    <div class="form-floating">#}
-            {##}
-            {#      <input type="password" class="form-control" id="id_password1" placeholder="Password">#}
-            {#      <label for="floatingPassword">Password</label>#}
-            {#    </div>#}
-            {#    <div class="form-floating">#}
-            {#      <input type="password" class="form-control" id="id_password2" placeholder="Password">#}
-            {#      <label for="floatingPassword">Password</label>#}
-            {#    </div>#}
             {% csrf_token %}
             {% for field in form %}
                 <p>
@@ -71,7 +83,7 @@
                     {% endfor %}
                 </p>
             {% endfor %}
-{#            </div>#}
+            {#            </div>#}
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
         </form>
     </main>
