--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,13 @@
 
 
     <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
 
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
@@ -60,8 +67,8 @@
 </head>
 <body>
 
-<div class="container px-4 py-5" id="featured-3">
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+<div class="container px-4 py-5" id="featured-4">
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
         <a href="https://documenter.getpostman.com/view/17432030/U16jLQMy">
             <div class="feature col">
                 <img alt=""
@@ -83,7 +90,16 @@
             </div>
         </a>
 
-        <a href="/register">
+        <a href="https://hub.docker.com/r/doriankucharski/geolocation_api_assignment">
+            <div class="feature col">
+                <img alt=""
+                     src="/static/docker.png"
+                     width="128" height="128">
+                <h2>Docker</h2>
+            </div>
+        </a>
+
+                <a href="/register">
             <div class="feature col">
                 <img alt=""
                      src="/static/register.png"
